objects/Influencer__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Contact_Influencing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Influencing</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Influencers (Contact Influencing)</relationshipLabel>
        <relationshipName>Influencers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_influenced__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact influenced</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Influencers</relationshipLabel>
        <relationshipName>Influencers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Influencers</relationshipLabel>
        <relationshipName>Influencers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Influencer</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Influencers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>